# Autonomous-Robot-Companion

./: README.md
Emotional Reactions Code/: CMakeLists.txt  README.md  package.xml
Emotional Reactions Code/include/: eStop.h  header.h  imageTransporter.hpp
Emotional Reactions Code/src/: contest3.cpp  imageTransporter.cpp  my_publisher_video.cpp
Following Code/launch/: follower.launch
